https://i.imgur.com/wJTw6N3.png updated the view profile with the correct icons and spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,10 @@ header {
   width: 100%;
 }
 
+.column-inline {
+  display: flex;
+}
+
 .row-test {
   display: flex;
   flex-direction: column;
